--- a/TS_Intro/package.json
+++ b/TS_Intro/package.json
@@ -10,10 +10,8 @@
   "author": "Mich_Rad <michalra@op.pl>",
   "license": "MIT",
   "devDependencies": {
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2"
-  },
-  "dependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
   }
 }
