--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "nodemon": "^2.0.12",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.172",
+    "lodash": "^4.17.21",
+    "parcel-bundler": "^1.12.5"
   }
 }
